manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-lab
  template:
    metadata:
      labels:
        app: ui-lab
    spec:
      containers:
      - name: axion-ui
        image: akacr1212134.azurecr.io/axion-ui:v3         
        ports:
        -  containePort: 8000
