manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-ui-ser
spec:
  type: ClusterIP
  selector:
    app: ui-lab
  ports:
  - port: 80
    targetPort: 8000
